# Coretes-Dashboard-Builder

./: README.md  package.json  platform_policies.md
backend/: .env.example  coretas.db  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: mappers.py  optimization.py  planner.py  platform_apis.py
backend/coretas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CreateModal.tsx  Dashboard.tsx  PlanPreview.tsx
